--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
 title: "Controllable Video Generation through Global and Local Motion Dynamics"
 description: "Aram Davtyan and Paolo Favaro. In ECCV, 2022."
